--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "briefing-upload-interface",
+  "name": "briefing-upload",
   "version": "1.0.0",
   "description": "Web-Interface für das Hochladen und Importieren von Briefing-Textdateien in Contentful",
   "main": "server.js",
